--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="./main.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300" rel="stylesheet">
+  <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
   <title>Punt Club</title>
 </head>
 <body>
